<resources>
    <string name="app_name">palindromeCheck</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="isPalindrome">isPalindrome</string>
    <string name="ok">Okay</string>
    <string name="notPalindrome">not palindrome</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="retry">Try Again</string>
</resources>